--- a/KiyoTech/src/app/app.component.html
+++ b/KiyoTech/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<nav-bar></nav-bar>
+<br>
 <div class="col">
-<home></home>
 <router-outlet></router-outlet>
 </div>
