--- a/KiyoTech/src/app/pages/home/home.component.html
+++ b/KiyoTech/src/app/pages/home/home.component.html
@@ -1,8 +1,7 @@
-<div class="row col">
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+<div class="col col-xs-12">
+<div id="carouselExampleFade"class="carousel slide   " data-ride="carousel">
         
-        <div class="carousel-inner">
+        <div class="carousel-inner ">
           <div class="carousel-item active">
             <img src="https://wallpapercave.com/wp/rtgOtlJ.jpg" class="d-block w-100" alt="Planeta">
           </div>
@@ -22,21 +21,86 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-</div>
+    </div>
+
 
 <br>
-<div class="row">
-    <div class="card text-center">
-        <div class="card-header">
-          Featured
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+<div class=row>
+  <div class="col">
+<div class="col-md-12">
+    <br>
+    <div class=" card card-header col-md-12">
+      <h1>Noticias</h1>
+    </div>
+    <br>
+
+  <div class="row ">
+    <div class="col col-md-6">
+      <div class="card text-center">
+          <div class="card-header">
+            Featured
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          <div class="card-footer text-muted">
+            2 days ago
+          </div>
         </div>
       </div>
+      <div class="col col-md-6">
+          <div class="card text-center">
+              <div class="card-header">
+                Featured
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+              <div class="card-footer text-muted">
+                2 days ago
+              </div>
+            </div>
+            <br>
+          </div>
+          
+           <div class="col col-md-6">
+      <div class="card text-center">
+          <div class="card-header">
+            Featured
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          <div class="card-footer text-muted">
+            2 days ago
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-6">
+          <div class="card text-center">
+              <div class="card-header">
+                Featured
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+              <div class="card-footer text-muted">
+                {{CurrentDate| date: 'dd/mm/yyyy'}}
+              </div>
+            </div>
+            <br>
+          </div>
+      
 </div>
+<br>
+</div><!--Card-->
+</div><!--col-->
+</div><!--row-->
